Updated to version 1.0.1

--- a/app.json
+++ b/app.json
@@ -13,17 +13,15 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    },
     "android": {
       "package": "com.oauthx.taki"
+    },
+    "web": {
+      "favicon": "./assets/favicon.png"
     }
   }
 }
