--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@react-navigation/stack": "^5.9.0",
     "@types/qs": "^6.9.5",
     "axios": "^0.20.0",
-    "expo": "^39.0.2",
+    "expo": "^39.0.3",
     "expo-facebook": "~9.0.0",
     "expo-google-app-auth": "^8.1.2",
     "expo-notifications": "~0.7.2",
@@ -43,6 +43,9 @@
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "typescript": "~3.9.2"
+  },
+  "resolutions": {
+    "@react-native-community/cli-debugger-ui": "4.7.0"
   },
   "private": true
 }
