Fixed memory leaks and updated to version 1.0.5

--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "oauthx-mobile",
+    "name": "Taki",
     "slug": "oauthx-mobile",
-    "version": "1.0.0",
+    "version": "1.0.5",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
