--- a/package.json
+++ b/package.json
@@ -20,13 +20,11 @@
     "expo-facebook": "~9.0.0",
     "expo-google-app-auth": "^8.1.2",
     "expo-notifications": "~0.7.2",
-    "expo-status-bar": "~1.0.2",
     "moment": "^2.28.0",
     "qs": "^6.9.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.0.tar.gz",
-    "react-native-android-dialog-picker": "^0.1.0",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-paper": "^4.1.0",
     "react-native-picker-select": "^8.0.0",
@@ -35,7 +33,7 @@
     "react-native-screens": "~2.10.1",
     "react-native-svg": "12.1.0",
     "react-native-web": "~0.13.7",
-    "react-native-zhb-actionsheet": "^1.2.0"
+    "expo-status-bar": "~1.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
