--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-community/async-storage": "~1.12.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/drawer": "^5.9.0",
+    "@react-navigation/material-top-tabs": "^5.3.0",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "@types/qs": "^6.9.5",
@@ -20,6 +21,7 @@
     "expo-facebook": "~9.0.0",
     "expo-google-app-auth": "^8.1.2",
     "expo-notifications": "~0.7.2",
+    "expo-status-bar": "~1.0.2",
     "moment": "^2.28.0",
     "qs": "^6.9.4",
     "react": "16.13.1",
@@ -32,8 +34,8 @@
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
     "react-native-svg": "12.1.0",
-    "react-native-web": "~0.13.7",
-    "expo-status-bar": "~1.0.2"
+    "react-native-tab-view": "^2.15.2",
+    "react-native-web": "~0.13.7"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
